namespace/media/sabnzbd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: media
spec:
  selector:
    app: sabnzbd
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: sabnzbd-ui
  type: ClusterIP
