namespace/media/sabnzbd/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd-https
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nsabnzbd.oglesby.io`)
      kind: Rule
      services:
        - name: sabnzbd
          port: 8080
  tls: 
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nsabnzbd.oglesby.io`)
      kind: Rule
      middlewares:
        - name: redirect-https
          namespace: traefik
      services:
        - name: sabnzbd
          port: 8080
